...
            android:text="@string/daily_tracker"
            android:textColor="#1EDFAA"
            android:textSize="24sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
...
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/rec_iew">

    </androidx.recyclerview.widget.RecyclerView>


    <!--<RelativeLayout
        android:layout_width="wrap_content"
...
