...
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:id="@+id/exp_sbp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_toEndOf="@+id/s1"
...
